Bootstrap fixed example: collapse breakpoint set to Bootstrap too

--- a/docs/examples/bootstrap-fixed/css/bootstrap-fixed.less
+++ b/docs/examples/bootstrap-fixed/css/bootstrap-fixed.less
@@ -20,7 +20,7 @@
 @p-border                         :  1px solid @navbar-inverse-border;
 
 // Changed RWD breakpoint
-@p-large-display-start            : 1200px;
+@grid-float-breakpoint            : 1200px;
 
 // --- Example CSS rules ---
 
